[package]
name = "passwords"
version = "3.1.16"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.61"
repository = "https://github.com/magiclen/passwords"
homepage = "https://magiclen.org/passwords"
keywords = ["password", "score", "strength", "bcrypt", "generate"]
categories = ["algorithms"]
description = "This crate provides useful tools to generate multiple readable passwords, as well as analyze and score them."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "data/**/*"]

[dependencies]
random-pick = "1.2.8"
rand = { version = "0.8", optional = true }
md5 = { version = "0.7", optional = true }
base64 = { version = "0.21", optional = true }
bcrypt = { version = "0.15", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }
ts-rs = { version = "10.0.0", features = ["serde_json", "serde-json-impl", "chrono"] }
[dev-dependencies]
regex = "1"
assert-eq-float = "0.1"

[features]
crypto = ["md5", "bcrypt", "base64", "rand"]
common-password = []
serde = ["serde/derive"]

[package.metadata.docs.rs]
all-features = true
